Updating new style

--- a/index.html
+++ b/index.html
@@ -11,51 +11,58 @@
 </head>
 
 <body>
-    <div class="container">
         <div id="app">
-            <section class="my-4">
-                <h2>Formulaire pour ajoute les Etudiants</h2>
-                <form>
-                    <div class="row">
-                        <div class="col form-group">
-                            <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" placeholder="Place your name here" id="name">
+            <section class="student-form">
+                <div class="py-4 container">
+                    <form class="mt-5 row">
+                        <div class="col-md-6 col-sm-12">
+                            <h1 class="form-title">Add <span class="new-title" style="color:#b75b6f;">new</span></br> student</h1>
+                            <div class="col form-group mb-4">
+                                <!-- <label for="name" class="form-label">Name</label> -->
+                                <input type="text" class="form-control" placeholder="Place your name here" id="name">
+                            </div>
+                            <div class="col form-group mb-4">
+                                <!-- <label for="date" class="form-label">Date</label> -->
+                                <input type="date" class="form-control" placeholder="date de naissance" id="date">
+                            </div>
+                            <div class="col form-group mb-4">
+                                <!-- <label for="note" class="form-label">Note</label> -->
+                                <input type="number" max="20" min="0" step="0.1" class="form-control" placeholder="La note"
+                                    id="note">
+                            </div>
+                            <div class="col form-group text-center" id="btn-add">
+                                <div class="btn btn-sm btn-success">ADD Student</div>
+                            </div>
                         </div>
-                        <div class="col form-group">
-                            <label for="date" class="form-label">Date</label>
-                            <input type="date" class="form-control" placeholder="date de naissance" id="date">
+                        <div class="col-md-6 col-sm-12 student-illustration">
+                            <img src="Images/Student-img.png" alt="">
                         </div>
-                        <div class="col form-group">
-                            <label for="note" class="form-label">Note</label>
-                            <input type="number" max="20" min="0" step="0.1" class="form-control" placeholder="La note"
-                                id="note">
-                        </div>
-                        <div class="col form-group py-4 text-center" id="btn-add">
-                            <div class="btn btn-sm btn-success px-5">Ajouter</div>
+                    </form>
+                </div>
+            </section>
+            <section class="table-responsive student-list">
+                <div class="container">
+                    <div class="py-3 title">
+                        <h1 class="list-title mb-0">students list</h1>
+                        <div class="text-end">
+                            <button type="button" class="btn btn-primary btn-sm" id="refresh">Actualise la liste</button>
                         </div>
                     </div>
-                </form>
-            </section>
-            <div class="table-responsive">
-                <div class="d-flex justify-content-between py-3">
-                    <h1>La liste des Etudiants</h1>
-                    <button type="button" class="btn btn-primary btn-sm" id="refresh">Actualise la liste</button>
+                    <table class="table">
+                        <thead>
+                            <tr class="table-primary">
+                                <th class="th-attribute" role="button" scope="col" data-name="id">#Id<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
+                                <th class="th-attribute" role="button" scope="col" data-name="name">Name<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
+                                <th class="th-attribute" role="button" scope="col" data-name="date">BirthDay<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
+                                <th class="th-attribute" role="button" scope="col" data-name="note">Note<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
+                                <th scope="col">Delete</th>
+                            </tr>
+                        </thead>
+                        <tbody class="list-etudiants">
+                        </tbody>
+                    </table>
                 </div>
-                <table class="table">
-                    <thead>
-                        <tr class="table-primary">
-                            <th class="th-attribute" role="button" scope="col" data-name="id">#Id<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
-                            <th class="th-attribute" role="button" scope="col" data-name="name">Name<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
-                            <th class="th-attribute" role="button" scope="col" data-name="date">BirthDay<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
-                            <th class="th-attribute" role="button" scope="col" data-name="note">Note<span class="th-arrow" style="margin-left:0.5rem;"></span></th>
-                            <th scope="col">Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody class="list-etudiants">
-                    </tbody>
-                </table>
-            </div>
-        </div>
+            </section>
     </div>
 </body>
 
